# lv_port_pc_vscode

./: .gitmodules  CMakeLists.txt  lv_conf.h  simulator.code-workspace
main/src/: main.c  mouse_cursor_icon.c
